--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,55 +24,49 @@
 ---
 x-airflow-common:
   &airflow-common
-  # Use an image based on a newer Python version
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2-python3.9}
-  # build: . # Keep build commented out if using official image
   environment:
     &airflow-common-env
+    # --- ADDED: Prevent Python from writing .pyc files ---
+    PYTHONDONTWRITEBYTECODE: "1"
+
     # --- Airflow Core Settings ---
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow # Airflow uses postgres service
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-    AIRFLOW__CORE__FERNET_KEY: '' # Default, should be set for security if needed
-    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
+    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true' # Default, specific DAGs can override
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
 
     # --- BASE Python Dependencies (Scheduler, Webserver, Triggerer, Worker Base) ---
-    # Keep this lean: Only include core providers, clients needed everywhere (GCS, DVC, MLflow, Pinecone), basic utils
+    # Lean list: Core providers, clients needed by most components
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn}
 
-    # --- Environment Variables Passed to Tasks (from Host or .env) ---
+    # --- Environment Variables Passed to Tasks (from Host or .env file) ---
+    # These are loaded via .env mount and load_dotenv() in scripts OR inherited by tasks
     OPENAI_API_KEY: ${OPENAI_API_KEY}
     LANGSMITH_API_KEY: ${LANGSMITH_API_KEY}
     LANGSMITH_PROJECT: ${LANGSMITH_PROJECT}
     LANGSMITH_TRACING: ${LANGSMITH_TRACING}
     PINECONE_API_KEY: ${PINECONE_API_KEY}
     PINECONE_INDEX_NAME: ${PINECONE_INDEX_NAME}
-    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT}
-    # --- !!! UPDATED MLFLOW URI !!! ---
-    # Point to the mlflow-server service within the Docker network on port 5000
-    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000}
+    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT} # Keep if pinecone client needs it
     HEVY_API_KEY: ${HEVY_API_KEY}
-    # GCS Bucket for MLflow Artifacts (Must have write access)
-    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts} # <<< ENSURE THIS BUCKET EXISTS
+    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000} # For tasks to log to mlflow-server container
+    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts} # For tasks & mlflow server
 
-  # --- Volume Mounts ---
   volumes:
-    # Mount entire project directory to /opt/airflow/app
-    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app
-    # Keep specific mounts needed by Airflow itself
+    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app # Mount project code
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env # Mount .env inside app dir
+    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env # Mount .env file inside app dir
 
-  # --- User ---
-  # user: "${AIRFLOW_UID:-50000}:0" # Keep commented out to run as root for now
+  # user: "${AIRFLOW_UID:-50000}:0" # Keep commented out unless needed
 
-  # --- Dependencies ---
   depends_on:
     &airflow-common-depends-on
     redis:
@@ -86,7 +80,7 @@ services:
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
-      POSTGRES_DB: airflow # Single DB for both Airflow and MLflow metadata
+      POSTGRES_DB: airflow
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
@@ -108,16 +102,21 @@ services:
       start_period: 30s
     restart: always
 
-  # --- MLFLOW SERVER SERVICE ---
+  # --- MLFLOW SERVER SERVICE (with pip install fix) ---
   mlflow-server:
-    image: python:3.9-slim
+    image: python:3.9-slim # Using slim image
     container_name: personaltrainerai-mlflow-server-1
     environment:
+      # Uses same DB as Airflow, but separate tables within 'airflow' DB
       MLFLOW_BACKEND_STORE_URI: postgresql+psycopg2://airflow:airflow@postgres/airflow
       MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
-    volumes: []
+      # Pass GCS credentials implicitly via VM service account
+    volumes: [] # No host volumes needed for this simple setup
     command: >
-      bash -c "pip install mlflow psycopg2-binary google-cloud-storage &&
+      bash -c "echo 'Ensuring pip is installed...' &&
+               python3 -m ensurepip --upgrade && # <<< FIX: Install/upgrade pip
+               echo 'Installing MLflow dependencies...' &&
+               pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && # Install necessary packages
                echo 'Starting MLflow server...' &&
                mlflow server \
                 --host 0.0.0.0 \
@@ -125,15 +124,16 @@ services:
                 --backend-store-uri $$MLFLOW_BACKEND_STORE_URI \
                 --default-artifact-root $$MLFLOW_ARTIFACT_ROOT"
     ports:
-      - "5001:5000"
+      - "5001:5000" # Expose MLflow UI on host port 5001
     restart: always
     depends_on:
       postgres:
-        condition: service_healthy
+        condition: service_healthy # Ensure DB is ready before MLflow starts
   # --- END MLFLOW SERVER SERVICE ---
 
   airflow-webserver:
     <<: *airflow-common
+    # Uses BASE dependencies defined in x-airflow-common
     command: webserver
     ports:
       - "8080:8080"
@@ -148,19 +148,19 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-      mlflow-server:
+      mlflow-server: # Wait for mlflow server to be started
          condition: service_started
 
   airflow-scheduler:
     <<: *airflow-common
+    # Uses BASE dependencies defined in x-airflow-common
     command: scheduler
     healthcheck:
-      # Updated healthcheck port for scheduler in Airflow 2.9+
-      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"] # Airflow 2.9+ uses 8973 by default
+      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"] # Airflow 2.9+ scheduler health port
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 30s # Increase start period to allow more time for init
+      start_period: 30s
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
@@ -173,19 +173,17 @@ services:
     <<: *airflow-common
     command: celery worker
     healthcheck:
-      test:
-        - "CMD-SHELL"
-        - 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"'
+      test: ["CMD-SHELL", 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"']
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 30s
+      start_period: 30s # Give worker time to install potentially heavy deps
     environment:
-      <<: *airflow-common-env # Inherit common environment variables
-      DUMB_INIT_SETSID: "0"
+      <<: *airflow-common-env # Inherit BASE env vars (DB, Redis, Core, etc.)
+      DUMB_INIT_SETSID: "0" # Specific worker setting
       # --- OVERRIDE: Add worker-specific heavy requirements ---
-      # Includes base requirements PLUS heavy ML/Eval libraries
-      _PIP_ADDITIONAL_REQUIREMENTS: "${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn} langchain langchain-openai langchain_community langchain_huggingface openai ragas deepseek langsmith scikit-learn numpy pandas tqdm matplotlib sentence-transformers torch transformers datasets" # Append worker-specific libraries here
+      # Concatenates BASE list (from common env) with WORKER-SPECIFIC list
+      _PIP_ADDITIONAL_REQUIREMENTS: "${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn} langchain langchain-openai langchain_community langchain_huggingface openai ragas deepseek langsmith scikit-learn numpy pandas tqdm matplotlib sentence-transformers torch transformers datasets"
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
@@ -196,6 +194,7 @@ services:
 
   airflow-triggerer:
     <<: *airflow-common
+    # Uses BASE dependencies defined in x-airflow-common
     command: triggerer
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
@@ -211,46 +210,72 @@ services:
       mlflow-server:
          condition: service_started
 
-  # --- AIRFLOW INIT SERVICE (No changes needed here from previous version) ---
+  # --- AIRFLOW INIT SERVICE ---
+  # Runs once to init/migrate DB and check setup
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
     command:
       - -c
       - |
-        # [...] Keep existing resource checks and warnings [...]
-        if [[ -z "${AIRFLOW_UID}" ]]; then
-          echo
-          echo -e "\033[1;33mWARNING!!!: AIRFLOW_UID not set!\e[0m"
-          # [...] Keep warnings [...]
-          echo
-        fi
-        # [...] Keep resource checks [...]
+        set -e # Exit immediately if a command exits with a non-zero status.
+        # Check resources (keep existing checks)
+        # ...
 
+        # Check .env permissions only if AIRFLOW_UID is set (for non-root execution)
+        if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
+          # Add check for .env file readability by AIRFLOW_UID if needed
+          echo "Checking .env file permissions (if AIRFLOW_UID is set)..."
+          # Example check: test -r /sources/.env || { echo "ERROR: .env file not readable by AIRFLOW_UID=${AIRFLOW_UID}"; exit 1; }
+        fi
+
+        # Ensure directories exist where volumes are mounted on host check path (/sources)
         mkdir -p /sources/logs /sources/dags /sources/plugins
-        echo "Attempting to make /sources/logs writable..."
+        echo "Attempting to make /sources/logs writable by all..."
         chmod -R 777 /sources/logs || echo "WARN: Failed to chmod /sources/logs"
 
-        if [[ -n "${AIRFLOW_UID}" ]]; then
-          echo "Changing ownership of /sources/* to ${AIRFLOW_UID}:0"
-          chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins} || echo "WARN: Failed to chown /sources"
+        # Correct permissions on host mounts IF AIRFLOW_UID is set and non-root
+        if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
+          echo "Changing ownership of /sources/* to ${AIRFLOW_UID}:0..."
+          # Be careful with chown on the root of the mount if project has many files
+          chown -R "${AIRFLOW_UID}:0" /sources/logs /sources/dags /sources/plugins || echo "WARN: Failed to chown basic dirs in /sources"
         else
-           echo "Skipping chown as AIRFLOW_UID is not set."
+           echo "Running as root or AIRFLOW_UID not set, skipping chown."
         fi
 
+        # Ensure standard Airflow directories exist inside the final container path
         mkdir -p /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins
 
-        # Continue with Airflow initialization checks
-        exec /entrypoint airflow version
+        # Check DB Migrations and User Creation
+        echo "Running Airflow DB migrate..."
+        airflow db migrate
+        echo "Creating Airflow Admin User..."
+        airflow users create \
+            --username "${_AIRFLOW_WWW_USER_USERNAME:-admin}" \
+            --password "${_AIRFLOW_WWW_USER_PASSWORD:-admin}" \
+            --firstname "${_AIRFLOW_WWW_USER_FIRSTNAME:-Admin}" \
+            --lastname "${_AIRFLOW_WWW_USER_LASTNAME:-User}" \
+            --role "${_AIRFLOW_WWW_USER_ROLE:-Admin}" \
+            --email "${_AIRFLOW_WWW_USER_EMAIL:-admin@example.com}" || \
+        echo "Admin user already exists or failed to create."
+
+        echo "Airflow initialization checks complete."
+        # Note: Removed 'exec /entrypoint airflow version' as migrate/users create are sufficient checks
     environment:
       <<: *airflow-common-env
-      _AIRFLOW_DB_MIGRATE: 'true'
-      _AIRFLOW_WWW_USER_CREATE: 'true'
-      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-Vinyas}
-      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-Vinyas}
-      _PIP_ADDITIONAL_REQUIREMENTS: '' # Don't install extra deps in init
-    user: "0:0" # Run init as root
+      # Override _PIP_ADDITIONAL_REQUIREMENTS for init - only needs core airflow+db driver
+      _PIP_ADDITIONAL_REQUIREMENTS: 'psycopg2-binary'
+      _AIRFLOW_DB_MIGRATE: 'false' # Set to false, we run migrate explicitly
+      _AIRFLOW_WWW_USER_CREATE: 'false' # Set to false, we run users create explicitly
+      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-Vinyas} # Use your desired admin user
+      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-Vinyas} # Use your desired admin pass
+      _AIRFLOW_WWW_USER_FIRSTNAME: ${_AIRFLOW_WWW_USER_FIRSTNAME:-Vinyas}
+      _AIRFLOW_WWW_USER_LASTNAME: ${_AIRFLOW_WWW_USER_LASTNAME:-N}
+      _AIRFLOW_WWW_USER_ROLE: ${_AIRFLOW_WWW_USER_ROLE:-Admin}
+      _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL:-vinyas@example.com}
+    user: "0:0" # Run init as root to perform setup actions
     volumes:
+      # Mount project dir to /sources for init checks
       - ${AIRFLOW_PROJ_DIR:-.}:/sources
   # --- END AIRFLOW INIT SERVICE ---
 
@@ -259,15 +284,14 @@ services:
     profiles:
       - debug
     environment:
-      <<: *airflow-common-env
+      <<: *airflow-common-env # Uses BASE dependencies
       CONNECTION_CHECK_MAX_COUNT: "0"
-    command:
-      - bash
-      - -c
-      - airflow
+    command: ["bash"] # Keep container running for exec
+    tty: true # Allocate pseudo-TTY
 
   flower:
     <<: *airflow-common
+    # Uses BASE dependencies
     command: celery flower
     profiles:
       - flower
